2005-10-01  David N. Welton  <davidw@dedasys.com>

	* tests/runtests.tcl: Add local path to TCLLIBPATH, add
	CoreDumpDirectory so that we can get any core files generated by
	bad tests.

	* src/mod_rivet.c (Rivet_PerInterpExit): Run any per-interp child
	exit things that need taking care of.
	(Rivet_ChildExit): Walk through the list of interpreters and do
	any shut down work necessary prior to shutting the whole thing
	down.

	* src/rivetChannel.c (outputproc): If the AssocData is NULL, we
	don't try and output anything.  This is probably some residual
	data stuck in the channel.

2005-09-29  Karl Lehenbauer  <karl-rivet@sc.com>

	* rivet/packages/dio/dio.tcl: Fix typo in "DIO insert" method

2005-09-25  Karl Lehenbauer  <karl-rivet@sc.com>

	* src/rivetCore.c, src/mod_rivet.c, src/mod_rivet.h: Updated
	code comments.  In particular, every function in src/mod_rivet.c
	now has a standard header.

	* rivet/rivet-tcl: README, cookie.tcl, debug.tcl, html.tcl,
	import_keyvalue_pairs.tcl, import_switch_args.tcl, incr0.tcl,
        lassign.tcl, lempty.tcl, lmatch.tcl, load_cookies.tcl,
        load_response.tcl, parray.tcl, random.tcl, read_file.tcl,
        rivet_command_document.tcl, wrap.tcl: Updated code comments
	and added subversion "Id" tags where they weren't present.

2005-09-23  David N. Welton  <davidw@dedasys.com>

	* genconf.sh: Added autoheaders.

	* doc/Makefile.am (docs): Documentation is now its own target -
	this means it doesn't get run as part of 'all'.

2005-09-22  Karl Lehenbauer  <karl-rivet@sc.com>

	* rivet/packages/dio/dio.tcl: "DIO insert" method is much more 
	efficient than "DIO store" when you know you want an insert and
	not an update and now actually works.

	* README.MacOSX:  GNU autoconf/configure script does not actually 
	work to make the Rivet module on Mac OS X so the README has been
	reverted to show it the old-school way using the Tcl build scripts.

2005-08-21  David N. Welton  <davidw@dedasys.com>
