@@ -2,7 +2,7 @@
  * rivetCore.c - Core commands which are compiled into mod_rivet itself.
  */
 
-/* Copyright 2002-2004 The Apache Software Foundation
+/* Copyright 2002-2005 The Apache Software Foundation
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
