@@ -1,4 +1,11 @@
+2005-10-31  David N. Welton  <davidw@dedasys.com>
+
+	* doc/rivet.xml: Woops, fix spelling error: Seperate->Separate.
+
 2005-10-01  David N. Welton  <davidw@dedasys.com>
+
+	* rivet/pkgIndex.tcl: Added a package index here so that when used
+	for tests, something exists.
 
 	* tests/runtests.tcl: Add local path to TCLLIBPATH, add
 	CoreDumpDirectory so that we can get any core files generated by
